Fixed the permadowned state of pawns

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for RaidersNeverDie
 
+1.4.2 - Fixed the permadowned state of pawns
+
+
 1.4.1 - Mod updated for 1.4 and passed autotests..
 Used DeepL to update translations for ChineseSimplified, French, German, Russian
 
