--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for RaidersNeverDie
 
+1.4.4 - Fixed the chance-calculations, value of 0 was inverted. Cleaned up the settings-page.
+
+
 1.4.3 - Should work better with deathless pawns now
 
 
