Mod updated for 1.5 and passed autotests

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for RaidersNeverDie
 
+1.5.0 - Mod updated for 1.5 and passed autotests
+
+
 1.4.4 - Fixed the chance-calculations, value of 0 was inverted. Cleaned up the settings-page.
 
 
