Mod updated for 1.6 and passed autotests

--- a/Languages/English/Keyed/Settings.xml
+++ b/Languages/English/Keyed/Settings.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <RND.raiderDeaths>Raider deathchance: {0}</RND.raiderDeaths>
   <RND.mechanoidDeaths>Mechanoid deathchance: {0}</RND.mechanoidDeaths>
